--- a/angular.json
+++ b/angular.json
@@ -39,16 +39,21 @@
           "configurations": {
             "production": {
               "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
-                }
+                  {
+                      "type": "initial",
+                      "maximumWarning": "700kb",  
+                      "maximumError": "800kb"   
+                  },
+                  {
+                      "type": "all",
+                      "maximumWarning": "700kb",
+                      "maximumError": "800kb"
+                  },
+                  {
+                      "type": "anyComponentStyle",
+                      "maximumWarning": "10kb", 
+                      "maximumError": "12kb"    
+                  }
               ],
               "outputHashing": "all"
             },
